Adicionado sistema de votação de filmes